--- a/react-native-webrtc-app/client/package.json
+++ b/react-native-webrtc-app/client/package.json
@@ -6,12 +6,13 @@
     "android": "react-native run-android",
     "ios": "react-native run-ios",
     "start": "react-native start",
-    "test": "jest",
-    "lint": "eslint ."
+    "lint": "eslint .",
+    "test": "jest"
   },
   "dependencies": {
-    "react": "17.0.2",
-    "react-native": "0.68.2",
+    "@types/react": "18.3.3",
+    "react": "18.2.0",
+    "react-native": "0.74.2",
     "react-native-incall-manager": "^4.0.1",
     "react-native-svg": "^13.7.0",
     "react-native-webrtc": "^1.94.2",
@@ -21,13 +22,22 @@
     "@babel/core": "^7.20.12",
     "@babel/runtime": "^7.20.7",
     "@react-native-community/eslint-config": "^3.2.0",
-    "babel-jest": "^29.3.1",
+    "babel-jest": "^29.6.3",
     "eslint": "^8.31.0",
-    "jest": "^29.3.1",
-    "metro-react-native-babel-preset": "^0.74.0",
-    "react-test-renderer": "17.0.2"
+    "jest": "^29.6.3",
+    "@babel/preset-env": "^7.20.0",
+    "@react-native/babel-preset": "0.74.84",
+    "@react-native/eslint-config": "0.74.84",
+    "@react-native/metro-config": "0.74.84",
+    "@react-native/typescript-config": "0.74.84",
+    "@types/react": "^18.2.6",
+    "@types/react-test-renderer": "^18.0.0",
+    "prettier": "2.8.8",
+    "react-test-renderer": "18.2.0",
+    "typescript": "5.0.4"
   },
-  "jest": {
-    "preset": "react-native"
-  }
+  "engines": {
+    "node": ">=18"
+  },
+  "packageManager": "yarn@3.6.4"
 }
