--- a/react-native-webrtc-app/client/ios/WebRTCExample/Info.plist
+++ b/react-native-webrtc-app/client/ios/WebRTCExample/Info.plist
@@ -48,5 +48,9 @@
 	</array>
 	<key>UIViewControllerBasedStatusBarAppearance</key>
 	<false/>
+	<key>NSCameraUsageDescription</key>
+		<string>We need access to your camera to streaming Video.</string>
+	<key>NSMicrophoneUsageDescription</key>
+		<string>We need access to your microphone to streaming audio.</string>
 </dict>
 </plist>
